<resources>
    <string name="app_name">pubQuizRemote</string>


    <!-- Usage in: AdminSettingsActivity -->
    <string name="round1">round1</string>
    <string name="round2">round2</string>


    <!-- Allocation: Category type <-> round number -->
    <string name="abcd_round">round1</string>
    <string name="image_round">round2</string>

    <!--
        <string name="round1">nav_round_one</string>
        <string name="round2">nav_image_round</string>
    -->

    <string name="buttonSignIn">Sign in with Google</string>

    <string name="webClientId">905660080461-pfde0t9t3lrpkvppd2jakhroqoiqesur.apps.googleusercontent.com</string>
    <string name="title_activity_logged_in_home">LoggedInHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

        <!-- Activity: AdminSettings -->
    <string name="adminSettings">Admin Settings</string>
    <string name="buttonInitialiseDB">Datenbank initialisieren</string>
    <string name="buttonAddQuestion">Frage hinzufügen</string>
    <string name="buttonCalculateRound">Runde auswerten</string>
    <string name="NoRoundNumberErrorMessage">"Bitte eine Runde eingeben!"</string>
    <string name="buttonBackfromAdminSettings">Zurück</string>
    <string name="editTextQuestion">Frage</string>
    <string name="editTextCorrectAnswer">Korrekte Antwort</string>
    <string name="editTextquestionNo">Nummer der Frage</string>
    <string name="editTextRound">Frage-Runde</string>

    <!-- Settings Menu -->
    <string name="settings">Info</string>
    <string name="logout">Logout</string>


    <string name="menu_home">Tabelle</string>
    <string name="menu_roundOne">1. Runde</string>
    <string name="menu_roundTwo">2. Runde</string>
    <string name="menu_roundThree">3. Runde</string>
    <string name="menu_roundFour">4. Runde</string>
    <string name="menu_roundFive">5. Runde</string>
    <string name="menu_roundSix">6. Runde</string>

    <string name="radioButtonOne">1.</string>
    <string name="radioButtonTwo">2.</string>
    <string name="radioButtonThree">3.</string>
    <string name="radioButtonFour">4.</string>
    <string name="radioButtonFive">5.</string>
    <string name="radioButtonSix">6.</string>

    <string name="PicNoOne">1</string>
    <string name="PicNoTwo">2</string>
    <string name="PicNoThree">3</string>
    <string name="PicNoFour">4</string>
    <string name="PicNoFive">5</string>
    <string name="PicNoSix">6</string>

    <string name="UserSaveAnswers">Antworten abschicken</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Used in: fragment_home.xml -->
    <string name="updateScoringTable">Tabelle aktualisieren</string>


    <!-- Shared Preferences -->
    <string name="abcdRound">abcdRound</string>

    <!-- System Messages -->
    <string name="no_selection">no_selection</string>

    <!-- Messages to Users-->
    <string name="messagetoUser_answers_incomplete">Es sind noch nicht alle 6 Fragen beantwortet!</string>


    <!-- Spinner Field in: AdminSwttingsActivity -->
    <string-array name="sections_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>