<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_infopage"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_round1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_roundOne" />
        <item
            android:id="@+id/nav_round2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_roundTwo" />
        <item
            android:id="@+id/nav_round3"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_roundThree" />
        <item
            android:id="@+id/nav_round4"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_roundFour" />
    </group>
</menu>