<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pubquizremote.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_round_one"
        android:name="com.example.pubquizremote.ui.roundOne.RoundOneFragment"
        android:label="@string/menu_roundOne"
        tools:layout="@layout/fragment_round_one" />

    <fragment
        android:id="@+id/nav_round_two"
        android:name="com.example.pubquizremote.ui.roundTwo.RoundTwoFragment"
        android:label="@string/menu_roundTwo"
        tools:layout="@layout/fragment_round_two" />
</navigation>