<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_infopage">

    <fragment
        android:id="@+id/nav_infopage"
        android:name="com.example.pubquizremote.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_infopage_to_nav_round1"
            app:destination="@id/nav_round1" />
    </fragment>

    <fragment
        android:id="@+id/nav_round1"
        android:name="com.example.pubquizremote.fragments.AbcdRoundFragment"
        android:label="@string/menu_roundOne"
        tools:layout="@layout/fragment_abcd_round" >
        <action
            android:id="@+id/action_nav_round1_to_nav_infopage"
            app:destination="@id/nav_infopage" />
    </fragment>

    <fragment
        android:id="@+id/nav_round2"
        android:name="com.example.pubquizremote.fragments.ImageRoundFragment"
        android:label="@string/menu_roundTwo"
        tools:layout="@layout/fragment_image_round" />

</navigation>