<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RoundOneLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoundOneFragment">

    <RadioGroup
        android:id="@+id/RadioGroupQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioButtonOne"
        android:orientation='horizontal'
        app:layout_constraintBottom_toTopOf="@+id/guidelineTableTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="radioButtonOne"
            android:text="@string/radioButtonOne" />

        <RadioButton
            android:id="@+id/radioButtonTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="radioButtonTwo"
            android:text="@string/radioButtonTwo" />


    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineQuestionChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTableTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTableVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTableVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePicRow1Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePicRow1Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePicRow2Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePicRow2Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePicRow3Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePicRow3Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/pic1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="pic1"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow1Top"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalMiddle"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow1Bottom" />

    <ImageView
        android:id="@+id/pic2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="pic2"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow1Top"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalMiddle"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow1Bottom" />

    <ImageView
        android:id="@+id/pic3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="pic3"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow2Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalMiddle"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow2Top" />

    <ImageView
        android:id="@+id/pic4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="pic4"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow2Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalMiddle"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow2Top" />

    <ImageView
        android:id="@+id/pic5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="pic5"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow3Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalMiddle"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow3Top" />

    <ImageView
        android:id="@+id/pic6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tag="pic6"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow3Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalMiddle"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow3Top" />

    <TextView
        android:id="@+id/PicNoOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PicNoOne"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow1Top"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow1Bottom" />

    <TextView
        android:id="@+id/PicNoTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PicNoTwo"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow1Top"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow1Bottom" />

    <TextView
        android:id="@+id/PicNoThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PicNoThree"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow2Bottom"
        app:layout_constraintEnd_toStartOf="@+id/pic3"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow2Top" />

    <TextView
        android:id="@+id/PicNoFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PicNoFour"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow2Bottom"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow2Top" />

    <TextView
        android:id="@+id/PicNoFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PicNoFive"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow3Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow3Top" />

    <TextView
        android:id="@+id/PicNoSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PicNoSix"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePicRow3Bottom"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintTop_toTopOf="@+id/guidelinePicRow3Top" />

    <TextView
        android:id="@+id/Label1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Label2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/pic5"
        tools:text="Abcdef" />

    <TextView
        android:id="@+id/Label2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Label3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/Label1"
        tools:text="Abcdef" />

    <TextView
        android:id="@+id/Label3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Label4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/Label2"
        tools:text="Excfr" />

    <TextView
        android:id="@+id/Label4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Label5"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/Label3"
        tools:text="sfgher" />

    <TextView
        android:id="@+id/Label5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Label6"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/Label4"
        tools:text="fgzres" />

    <TextView
        android:id="@+id/Label6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text=""

        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/UserSaveAnswers"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/Label5"
        tools:text="dspögfjirspg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <Button
        android:id="@+id/UserSaveAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserSaveAnswers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Spinner
        android:id="@+id/spinnerAnswerOptions11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/spinnerAnswerOptions12"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/PicNoSix" />

    <Spinner
        android:id="@+id/spinnerAnswerOptions12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/spinnerAnswerOptions13"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAnswerOptions11" />

    <Spinner
        android:id="@+id/spinnerAnswerOptions13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/spinnerAnswerOptions14"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAnswerOptions12" />

    <Spinner
        android:id="@+id/spinnerAnswerOptions14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/spinnerAnswerOptions15"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAnswerOptions13" />

    <Spinner
        android:id="@+id/spinnerAnswerOptions15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/spinnerAnswerOptions16"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAnswerOptions14" />

    <Spinner
        android:id="@+id/spinnerAnswerOptions16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineTableVerticalRight"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAnswerOptions15" />


</androidx.constraintlayout.widget.ConstraintLayout>